# reverse_logistics_profit_model

./: Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: 0.01-co-data-exploration-1.ipynb  1-co-feature-creation-1.ipynb
reverse_logistics_profit_model/: __init__.py  dataset.py  features.py  plots.py  poshmark_scraper.py
reverse_logistics_profit_model/modeling/: predict.py  train.py
