[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "reverse_logistics_profit_model"
version = "0.0.1"
description = "This project attempts to determine the ideal parameters for a reverse logistics profit model."
authors = [
  { name = "chizok4" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["reverse_logistics_profit_model"]
include = ["pyproject.toml", "reverse_logistics_profit_model/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["reverse_logistics_profit_model"]
force-sort-within-sections = true

